# Necronomics

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  eslint.config.js  package-lock.json  package.json
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
client/: package-lock.json  package.json
client/src/: App.tsx
docs/: ARCHITECTURE.md  DATABASE.md  DESIGN_SYSTEM.md  FEATURES.md  PROJECT_VISION.md  ROADMAP.md
server/: package-lock.json  package.json
server/prisma/: schema.prisma
server/src/: app.module.ts  main.ts
src/: App.css  App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: accounts.rs  categories.rs  dashboard.rs  debts.rs  mod.rs  transactions.rs
src-tauri/src/db/: mod.rs  models.rs
src-tauri/src/db/migrations/: 001_initial_schema.sql  002_seed_currencies.sql  003_seed_categories.sql  004_migrate_category_icons.sql  005_create_installments.sql
src-tauri/src/db/queries/: accounts.rs  categories.rs  dashboard.rs  debts.rs  mod.rs  transactions.rs
src-tauri/src/services/: mod.rs
src/lib/: formatters.ts  hooks.ts  tauri.ts
src/pages/: AccountsPage.tsx  CategoriesPage.tsx  DashboardPage.tsx  DebtsPage.tsx  EditAccountPage.tsx  NewAccountPage.tsx  TransactionsPage.tsx
src/stores/: accountStore.ts  categoryStore.ts  debtStore.ts  (+1 more)
(+91 files in other folders)
